# MLOpsWithJax

./: .gitignore  README.md  requirements.txt  test_deployment.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cicd_fusion_team_serving.yaml  cicd_ml_platform.yaml
src/alphabrain/: Dockerfile  deployment.sh  docker-compose.yml  pyproject.toml  run_tfserving_local.sh  sample.json  serving-deployment.yaml  serving-endpoint.yaml
src/alphabrain/alphabrain/: app.py  config.py  graphql_api.py
src/alphabrain/alphabrain/mlops/: Dockerfile  pipeline.py  serving.py
src/alphabrain/alphabrain/mlops/trainer/: azure_ml_repo.py  dataset.py  serialization.py  train.py  transform.py
src/alphabrain/experiments/: mlops.ipynb  predictions.ipynb
src/alphabrain/gateway/: server.ts
src/alphabrain/iac/: ml.bicep  ml_platform.bicep  mlops.bicep
src/alphabrain/iac/application/: main.bicep
src/alphabrain/iac/application/modules/: application.bicep
src/alphabrain/iac/fusion_team/: build_and_push_containers_to_registry.sh  container_registry.bicep  main.bicep  serving_infrastructure.bicep  upload_container_to_registry.sh
src/alphabrain/iac/ml_platform_team/: build_and_push_containers_to_registry.sh  ml_platform.bicep
src/mlteacher/: Dockerfile  pyproject.toml  run_tfserving_local.sh  save.py  serving-deployment.yaml  simple_sample.json
src/mlteacher/func_invoke_training_model/: host.json
src/mlteacher/func_invoke_training_model/startmodeltraining/: __init__.py  function.json
src/mlteacher/logs/: events.out.tfevents.1665406557.codespaces-5fb21a.12781.0.v2
src/mlteacher/mlteacher/: app.py  config.py  submit_training.py
src/mlteacher/mlteacher/mlops/: models.py  pipeline.py  seq2seq.ipynb  serving.py  train.py
(+1 files in other folders)
